# OpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  Design.txt  README.md  clean.bat  generate_project_files.bat
assets/images/plank/: Planks012_2K-PNG.blend  Planks012_2K-PNG.mtlx  Planks012_2K-PNG.tres  Planks012_2K-PNG.usdc
assets/models/: cube.fbx  floor.fbx
assets/models/laurel_grove_cemetrey_angel/: LaurelGroveCemetary1.mtl  laurel_grove_cemetery_angel.glb
assets/models/sculpture/: La_Manola1_Model_5.obj.mtl  sculptural_fountain_la_manola_1.glb
assets/shaders/: basic_lighting_fs.glsl  basic_lighting_vs.glsl  line_fs.glsl  line_vs.glsl  model_loading_fs.glsl  skybox_vs.glsl
resources/GLAD/include/glad/: glad.h
resources/GLAD/src/: glad.c
src/: clang-format  glad.c  main.cpp  pch.h
src/App/: App.cpp  App.h  TextureLoader.cpp  TextureLoader.h
src/App/data/: Texture.h
src/core/actor/: Actor.cpp  Actor.h  CubeActor.cpp  CubeActor.h  Pawn.cpp  Pawn.h  PlaneActor.cpp  PlaneActor.h  SphereActor.cpp  SphereActor.h
src/core/camera/: Camera.cpp  Camera.h
src/core/components/: BaseComponent.h  CameraComponent.cpp  CameraComponent.h  InputComponent.cpp  InputComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  PrimitiveComponent.cpp  PrimitiveComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SceneGridComponent.cpp  SceneGridComponent.h  SpringArmComponent.cpp  SpringArmComponent.h  TransformComponent.cpp  TransformComponent.h
src/core/mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/core/physcis/: Collider.h  Collision.cpp  Collision.h
src/core/scene/: MainLevel.cpp  MainLevel.h  Scene.cpp  Scene.h
src/platform/input/: Input.h  InputAction.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/platform/window/: Window.cpp  Window.h
src/renderer/: RenderGlobals.h  Renderer.cpp  Renderer.h
src/renderer/lighting/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/renderer/material/: Material.cpp  Material.h
src/renderer/shaders/: GL_ShaderSource.h  Shader.cpp  Shader.h
src/renderer/skybox/: Cubemap.cpp  Cubemap.h  Skybox.cpp  Skybox.h  SkyboxData.h
